Repository, WarehouseRepository, Unit of Work, migrations

--- a/SystemInventoryWebNet5/SystemInventoryWebNet5.csproj
+++ b/SystemInventoryWebNet5/SystemInventoryWebNet5.csproj
@@ -13,6 +13,17 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.17" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SystemInventory.DataAccess\SystemInventory.DataAccess.csproj" />
+    <ProjectReference Include="..\SystemInventory.Models\SystemInventory.Models.csproj" />
+    <ProjectReference Include="..\SystemInventory.Utils\SystemInventory.Utils.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Areas\Admin\Controllers\" />
   </ItemGroup>
 
 </Project>
