--- a/SystemInventoryWebNet5/appsettings.json
+++ b/SystemInventoryWebNet5/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-SystemInventoryWebNet5-DB665A25-73AF-49C3-962B-C2B9C8105E46;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "Inventory": "Server=SAMUELHURTADO\\SQLEXPRESS;Database=InventoryNet5;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;"
   },
   "Logging": {
     "LogLevel": {
