--- a/SystemInventory.DataAccess/SystemInventory.DataAccess.csproj
+++ b/SystemInventory.DataAccess/SystemInventory.DataAccess.csproj
@@ -4,4 +4,14 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.17" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.17" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.17" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SystemInventory.Models\SystemInventory.Models.csproj" />
+  </ItemGroup>
+
 </Project>
