Category crud: controller, entity, repository, migration, views

--- a/SystemInventoryWebNet5/appsettings.json
+++ b/SystemInventoryWebNet5/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Inventory": "Server=SAMUELHURTADO\\SQLEXPRESS;Database=InventoryNet5;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;"
+    "Inventory": "Server=localhost;Database=InventoryNet5;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;"
   },
   "Logging": {
     "LogLevel": {
