CRUD Product: controller, model, migration, views

--- a/SystemInventoryWebNet5/SystemInventoryWebNet5.csproj
+++ b/SystemInventoryWebNet5/SystemInventoryWebNet5.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\SystemInventory.Utils\SystemInventory.Utils.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\pictures\products\" />
+  </ItemGroup>
+
 </Project>
