extending  user identity properties

--- a/SystemInventoryWebNet5/appsettings.Development.json
+++ b/SystemInventoryWebNet5/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Inventory": "Server=localhost;Database=InventoryNet5;User Id=samuelh;Password=159632;Connect Timeout=30;"
+    "Inventory": "Server=localhost\\SQLEXPRESS;Database=InventoryNet5;User Id=sa;Password=159632;Connect Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
