company crud - company model, controller, repository

--- a/SystemInventoryWebNet5/SystemInventoryWebNet5.csproj
+++ b/SystemInventoryWebNet5/SystemInventoryWebNet5.csproj
@@ -24,6 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="wwwroot\pictures\companies\" />
     <Folder Include="wwwroot\pictures\products\" />
   </ItemGroup>
 
